# wizard-ai

./: .gitignore  README.md  google_test.py  graph_image_drawer.py  project_tree.md  project_tree.txt  skaffold  skaffold.yaml
.docker/: Dockerfile  (+4 more)
mai_assistant/: .env.example  main.py  pyproject.toml  requirements.txt  skaffold.yaml
mai_assistant/.helm/redis/: values.yaml
mai_assistant/.kubernetes/redis/: secrets.yaml
mai_assistant/.skaffold/: redis.yaml  secrets.yaml
mai_assistant/app/: llm_client.py  main.py  main_working.py  requirements.txt
mai_assistant/mai_assistant/: __init__.py  main.py
mai_assistant/mai_assistant/clients/: __init__.py  google.py  google_search.py  llm.py
mai_assistant/mai_assistant/constants/: message_type.py  redis_keys.py
mai_assistant/mai_assistant/controllers/: conversations.py  google_actions.py  google_login.py
mai_assistant/mai_assistant/conversational_engine/: __init__.py  engine.py
mai_assistant/mai_assistant/models/: __init__.py  chat_payload.py
mai_assistant/src/: engine.py  html_processor.py  llm_client.py  main.py  main_working.py  prompt.json  quickstart.py
mai_assistant/src/agents/: gpt.py  llama.py  memory.py
mai_assistant/src/callbacks/: __init__.py  tool_logger.py
mai_assistant/src/clients/: __init__.py  google.py  google_search.py  llm.py  rabbitmq.py  redis.py
mai_assistant/src/constants/: __init__.py  message_queues.py
mai_assistant/src/controllers/: __init__.py  chat.py  conversations.py  google_actions.py  google_login.py  redis.py
mai_assistant/src/conversational_engine/: engine.py
(+285 files in other folders)
